--- a/app/newRequest/newRequest.html
+++ b/app/newRequest/newRequest.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Title</title>
 </head>
 <body>
+new REQUEST
+api/home/new-request
 
 </body>
 </html>
