--- a/app/home/homeRequestor.html
+++ b/app/home/homeRequestor.html
@@ -6,11 +6,169 @@
     <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css">
 </head>
 <body>
-<img class="logo" src="../../css/images/logo.png">
+<div class="container">
+    <header>
+        <div class="row">
+            <div class="col-sm-1">
+                <img class="logo" src="../../css/images/logo.png">
+            </div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-5" id="projectName">
+                <h4>Request Control Tool(RCT)</h4>
+            </div>
+            <div id="loggedField">
+                Logged in as Donna Boucher |
+                <a href="#">Help </a>|
+                <button onclick="backToLoginPage()">Sign Out</button>
+            </div>
+        </div>
+    </header>
+    <div class="row">
+        <nav>
+            <div class="col-sm-2" id="rmaNav">
+                <ul class="nav nav-pills nav-stacked">
+                    <li role="presentation" class="active"><a href="#">
+                        <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
+                    </a></li>
+                    <li role="presentation"><a href="#">
+                        <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> New RCT</span>
+                    </a></li>
+                    <li role="presentation"><a href="#">
+                        <span class="glyphicon glyphicon-road" aria-hidden="true"> In Process</span>
+                    </a></li>
+                    <li role="presentation"><a href="#">
+                        <span class="glyphicon glyphicon-time" aria-hidden="true"> History</span>
+                    </a></li>
+                    <li role="presentation"><a href="#">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"> Search</span>
+                    </a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="col-sm-10 pending">
+            <h4 class="blueText">Pending</h4><span class="grayText"> (my actions)</span>
+        </div>
+        <div class="col-sm-10">
+            <table class="table"">
+            <thead>
+            <tr>
+                <th>
+                    Request ID
+                </th>
+                <th>
+                    Total Value
+                </th>
+                <th>
+                    Request Date
+                </th>
+                <th>
+                    CSR Name
+                </th>
+                <th>
+                    Status
+                </th>
+                <th>
+                    Details
+                </th>
+                <th>
+                    Remove
+                </th>
+            </tr>
+            </thead>
+            </table>
+        </div>
+        <div class="col-sm-10">
+            <h4 class="blueText">In Process</h4><span class="grayText"> (requests)</span>
+        </div>
+        <div class="col-sm-10">
+            <table class="table"">
+            <thead>
+            <tr>
+                <th>
+                    Request ID
+                </th>
+                <th>
+                    Total Value
+                </th>
+                <th>
+                    Request Date
+                </th>
+                <th>
+                    CSR Name
+                </th>
+                <th>
+                    Next Approver
+                </th>
+                <th>
+                    Comments
+                </th>
+                <th>
+                    Details
+                </th>
+                <th>
+                    Remove
+                </th>
+            </tr>
+            </thead>
+            </table>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <h4 class="blueText">History</h4><span class="grayText"> (requests)</span>
+        </div>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-10">
+            <table class="table"">
+            <thead>
+            <tr>
+                <th>
+                    Request ID
+                </th>
+                <th>
+                    RCT Name
+                </th>
+                <th>
+                    RCT Number
+                </th>
+                <th>
+                    Total Value
+                </th>
+                <th>
+                    Initiated Date
+                </th>
+                <th>
+                    Approved Date
+                </th>
+                <th>
+                    Expiration Date
+                </th>
+                <th>
+                    Return Warehouse
+                </th>
+                <th>
+                    Customer Name
+                </th>
+                <th>
+                    CSR Name
+                </th>
+                <th>
+                    Details
+                </th>
+            </tr>
+            </thead>
+            </table>
+        </div>
+
+    </div>
+    <footer>
+        <div class="col-sm-6 col-sm-offset-4 grayText">© 2017 Request Control Tool. All Rights Reserved.
+        </div>
+    </footer>
+</div>
 
 
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
-
+<script type="text/javascript" src="homeRequestor.js"></script>
 </body>
 </html>
