--- a/app/home/homeRequestor.html
+++ b/app/home/homeRequestor.html
@@ -169,6 +169,6 @@
 
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
-<script type="text/javascript" src="homeRequestor.js"></script>
+<script type="text/javascript" src="../../js/homeRequestor.js"></script>
 </body>
 </html>
