add new js and html files

--- a/app/newRequest/newRequest.html
+++ b/app/newRequest/newRequest.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="../../css/index.css" type="text/css">
+    <link rel="stylesheet" href="../../css/bootstrap.css" type="text/css">
 </head>
 <body>
-new REQUEST
-api/home/new-request
-
+<div class="container">
+<div id="nav-header"></div>
+</div>
+<script type="text/javascript" src="../../js/jquery/jquery.js"></script>
+<script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
+<script type="text/javascript" src="../../app/newRequest/newRequest.js"></script>
 </body>
 </html>
