--- a/app/home/homeRequestor.html
+++ b/app/home/homeRequestor.html
@@ -7,49 +7,13 @@
 </head>
 <body>
 <div class="container">
-    <header>
-        <div class="row">
-            <div class="col-sm-1">
-                <img class="logo" src="../../css/images/logo.png">
-            </div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-5" id="projectName">
-                <h4>Request Control Tool(RCT)</h4>
-            </div>
-            <div id="loggedField">
-                Logged in as Donna Boucher |
-                <a href="#">Help </a>|
-                <button onclick="backToLoginPage()">Sign Out</button>
-            </div>
-        </div>
-    </header>
     <div class="row">
-        <nav>
-            <div class="col-sm-2" id="rmaNav">
-                <ul class="nav nav-pills nav-stacked">
-                    <li role="presentation" class="active"><a href="#">
-                        <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
-                    </a></li>
-                    <li role="presentation"><a href="#">
-                        <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> New RCT</span>
-                    </a></li>
-                    <li role="presentation"><a href="#">
-                        <span class="glyphicon glyphicon-road" aria-hidden="true"> In Process</span>
-                    </a></li>
-                    <li role="presentation"><a href="#">
-                        <span class="glyphicon glyphicon-time" aria-hidden="true"> History</span>
-                    </a></li>
-                    <li role="presentation"><a href="#">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"> Search</span>
-                    </a></li>
-                </ul>
-            </div>
-        </nav>
+        <div id="nav-header"></div>
         <div class="col-sm-10 pending">
             <h4 class="blueText">Pending</h4><span class="grayText"> (my actions)</span>
         </div>
         <div class="col-sm-10">
-            <table class="table"">
+            <table class="table">
             <thead>
             <tr>
                 <th>
@@ -169,6 +133,6 @@
 
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
-<script type="text/javascript" src="../../js/homeRequestor.js"></script>
+<script type="text/javascript" src="../../app/home/homeRequestor.js"></script>
 </body>
 </html>
