--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <script type="text/javascript" src="js/jquery/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap/bootstrap.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
 
