add include files

--- a/app/home/homeRequestor.html
+++ b/app/home/homeRequestor.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div class="container">
+    <div id="header"></div>
     <div class="row">
-        <div id="nav-header"></div>
+        <div id="navigation"></div>
         <div class="col-sm-10 pending">
             <h4 class="blueText">Pending</h4><span class="grayText"> (my actions)</span>
         </div>
@@ -122,17 +123,13 @@
             </thead>
             </table>
         </div>
-
     </div>
-    <footer>
-        <div class="col-sm-6 col-sm-offset-4 grayText">© 2017 Request Control Tool. All Rights Reserved.
-        </div>
-    </footer>
+    <div id="footer"></div>
 </div>
-
 
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
+<script type="text/javascript" src="../../app/include/include.js"></script>
 <script type="text/javascript" src="../../app/home/homeRequestor.js"></script>
 </body>
 </html>
