--- a/app/newRequest/newRequest.html
+++ b/app/newRequest/newRequest.html
@@ -7,10 +7,15 @@
 </head>
 <body>
 <div class="container">
-<div id="nav-header"></div>
+<div id="header"></div>
+    <div class="row">
+        <div id="navigation"></div>
+    </div>
+    <div id="footer"></div>
 </div>
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../js/bootstrap/bootstrap.js"></script>
+<script type="text/javascript" src="../../app/include/include.js"></script>
 <script type="text/javascript" src="../../app/newRequest/newRequest.js"></script>
 </body>
 </html>
